# orix-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
assets/gui/: lobby_browser.rml  main_menu.rml  style.rcss
include/: Camera.hpp  Input.hpp
include/core/: Application.hpp  Camera.hpp  Input.hpp  StateManager.hpp
include/game/: Block.hpp  Chunk.hpp  FastNoiseLite.h  Player.hpp  World.hpp
include/game/network/: NetworkPackets.hpp
include/platform/: Steam.hpp
include/renderer/: Mesh.hpp  Shader.hpp
include/states/: MainMenuState.hpp  PlayState.hpp  State.hpp
include/ui/: UIManager.hpp
shaders/: basic.frag  basic.vert
src/: main.cpp
src/core/: Application.cpp  Camera.cpp  Chunk.cpp  Input.cpp  StateManager.cpp
src/game/: Chunk.cpp  Player.cpp  World.cpp
src/platform/: Steam.cpp  Steam.hpp
src/renderer/: Mesh.hpp  Shader.cpp  Shader.hpp
src/states/: MainMenuState.cpp  PlayState.cpp
src/ui/: UIManager.cpp
